--- a/index.html
+++ b/index.html
@@ -5,44 +5,44 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="page">
     <div class="matrix">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="matrix__pic" src="./eisenhower-matrix.jpg">
       <a class="matrix__link-more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main">
       <p id="add-tasks">
-        <label for="new-task">Add Item</label>
+        <label for="new-task" class="tasks-title new-task">Add Item</label>
         <div class="task-wrapper">
-          <input id="new-task" class="task" type="text">
-          <button>Add</button>
+          <input id="new-task" class="task input-text new-task" type="text">
+          <button class="button add-sasks__button">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
+      <h3 class="tasks-title">Todo</h3>
       <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+        <li class="tasks__item">
+          <input type="checkbox" class="check-list">
+          <label class="task task-subtitle">Pay Bills</label>
+          <input type="text" class="input-text">
+          <button class="edit button">Edit</button>
+          <button class="delete button"><img src="./remove.svg"></button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg"></button>
+        <li class="edit-mode tasks__item">
+          <input type="checkbox" class="check-list">
+          <label class="task task-subtitle">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task input-text">
+          <button class="edit button">Save</button>
+          <button class="delete button"><img src="./remove.svg"></button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+      <h3 class="tasks-title">Completed</h3>
+      <ul id="completed-tasks" class="completed-tasks">
+        <li class="tasks__item">
+          <input type="checkbox" class="check-list" checked>
+          <label class="task task-subtitle">See the Doctor</label>
+          <input type="text" class="task input-text">
+          <button class="edit button">Edit</button>
+          <button class="delete button"><img src="./remove.svg"></button>
         </li>
       </ul>
     </div>
