fix: fixed an error in the class name add-tasks__button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <label for="new-task" class="tasks-title new-task">Add Item</label>
         <div class="task-wrapper">
           <input id="new-task" class="task input-text new-task" type="text">
-          <button class="button add-sasks__button">Add</button>
+          <button class="button add-tasks__button">Add</button>
         </div>
       </p>
       <h3 class="tasks-title">Todo</h3>
