--- a/index.html
+++ b/index.html
@@ -11,40 +11,44 @@
       <a class="matrix__link-more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main">
-      <p id="add-tasks">
+      <section id="add-tasks">
         <label for="new-task" class="tasks-title new-task">Add Item</label>
         <div class="task-wrapper">
           <input id="new-task" class="task input-text new-task" type="text">
           <button class="button add-tasks__button">Add</button>
         </div>
-      </p>
-      <h3 class="tasks-title">Todo</h3>
-      <ul id="incomplete-tasks">
-        <li class="tasks__item">
-          <input type="checkbox" class="check-list">
-          <label class="task task-subtitle">Pay Bills</label>
-          <input type="text" class="input-text">
-          <button class="edit button">Edit</button>
-          <button class="delete button"><img src="./remove.svg"></button>
-        </li>
-        <li class="edit-mode tasks__item">
-          <input type="checkbox" class="check-list">
-          <label class="task task-subtitle">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task input-text">
-          <button class="edit button">Save</button>
-          <button class="delete button"><img src="./remove.svg"></button>
-        </li>
-      </ul>
-      <h3 class="tasks-title">Completed</h3>
-      <ul id="completed-tasks" class="completed-tasks">
-        <li class="tasks__item">
-          <input type="checkbox" class="check-list" checked>
-          <label class="task task-subtitle">See the Doctor</label>
-          <input type="text" class="task input-text">
-          <button class="edit button">Edit</button>
-          <button class="delete button"><img src="./remove.svg"></button>
-        </li>
-      </ul>
+      </section>
+      <section class="to-do">
+        <h3 class="tasks-title">Todo</h3>
+        <ul id="incomplete-tasks">
+            <li class="tasks__item">
+            <input type="checkbox" class="check-list">
+            <label class="task task-subtitle">Pay Bills</label>
+            <input type="text" class="input-text">
+            <button class="edit button">Edit</button>
+            <button class="delete button"><img src="./remove.svg"></button>
+            </li>
+            <li class="edit-mode tasks__item">
+            <input type="checkbox" class="check-list">
+            <label class="task task-subtitle">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task input-text">
+            <button class="edit button">Save</button>
+            <button class="delete button"><img src="./remove.svg"></button>
+            </li>
+        </ul>
+      </section>
+      <section class="completed">
+        <h3 class="tasks-title">Completed</h3>
+        <ul id="completed-tasks" class="completed-tasks">
+            <li class="tasks__item">
+            <input type="checkbox" class="check-list" checked>
+            <label class="task task-subtitle">See the Doctor</label>
+            <input type="text" class="task input-text">
+            <button class="edit button">Edit</button>
+            <button class="delete button"><img src="./remove.svg"></button>
+            </li>
+        </ul>
+      </section>
     </div>
   <script src="app.js"></script>
   </body>
