--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="page">
     <div class="matrix">
-      <img class="matrix__pic" src="./eisenhower-matrix.jpg">
+      <img class="matrix__pic" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
       <a class="matrix__link-more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main">
@@ -26,14 +26,14 @@
             <label class="task task-subtitle">Pay Bills</label>
             <input type="text" class="input-text">
             <button class="edit button">Edit</button>
-            <button class="delete button"><img src="./remove.svg"></button>
+            <button class="delete button"><img src="./remove.svg" alt="remove task"></button>
             </li>
             <li class="edit-mode tasks__item">
             <input type="checkbox" class="check-list">
             <label class="task task-subtitle">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task input-text">
             <button class="edit button">Save</button>
-            <button class="delete button"><img src="./remove.svg"></button>
+            <button class="delete button"><img src="./remove.svg" alt="remove task"></button>
             </li>
         </ul>
       </section>
@@ -45,7 +45,7 @@
             <label class="task task-subtitle">See the Doctor</label>
             <input type="text" class="task input-text">
             <button class="edit button">Edit</button>
-            <button class="delete button"><img src="./remove.svg"></button>
+            <button class="delete button"><img src="./remove.svg" alt="remove task"></button>
             </li>
         </ul>
       </section>
