--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       <section class="to-do">
         <h3 class="tasks-title">Todo</h3>
         <ul id="incomplete-tasks">
-            <li class="tasks__item">
+            <li class="incomplete-tasks__item tasks__item">
             <input type="checkbox" class="check-list">
             <label class="task task-subtitle">Pay Bills</label>
             <input type="text" class="input-text">
             <button class="edit button">Edit</button>
             <button class="delete button"><img src="./remove.svg" alt="remove task"></button>
             </li>
-            <li class="edit-mode tasks__item">
+            <li class="incomplete-tasks__item edit-mode tasks__item">
             <input type="checkbox" class="check-list">
             <label class="task task-subtitle">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task input-text">
@@ -40,7 +40,7 @@
       <section class="completed">
         <h3 class="tasks-title">Completed</h3>
         <ul id="completed-tasks" class="completed-tasks">
-            <li class="tasks__item">
+            <li class="completed-tasks__item tasks__item">
             <input type="checkbox" class="check-list" checked>
             <label class="task task-subtitle">See the Doctor</label>
             <input type="text" class="task input-text">
